<resources>
    <string name="app_name">MusicApp Manager</string>
    <string name="title_activity_main">MusicApp Manager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Upload Song</string>
    <string name="second_fragment_label">Infomation</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title">Title:</string>
    <string name="artist">Artist:</string>
    <string name="upload">Upload</string>
    <string name="upload_song">Upload Song</string>
    <string name="cloud_song">Cloud Song</string>
    <string name="update">update</string>
    <string name="updateInfo">Update Information</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="loginbtn">LOGIN</string>
    <string name="user">Manage User</string>
    <string name="form_user_fragment">User Management</string>
</resources>