<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_upload">

    <fragment
        android:id="@+id/nav_upload"
        android:name="com.example.musicupload.fragment.DevicemusicFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/device_music_fragment">

        <action
            android:id="@+id/action_DeviceFragment_to_FormUploadFragment"
            app:destination="@id/FormUploadFragment" />
    </fragment>
    <fragment
        android:id="@+id/FormUploadFragment"
        android:name="com.example.musicupload.fragment.FormUploadFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/form_upload_fragment">
    </fragment>

    <fragment
        android:id="@+id/nav_cloud"
        android:name="com.example.musicupload.fragment.CloudFragment"
        android:label="Cloud Song"
        tools:layout="@layout/cloud_fragment">

        <action
            android:id="@+id/nav_cloud_to_FormUpdateFragment"
            app:destination="@id/FormUpdateFragment"/>
    </fragment>

    <fragment
        android:id="@+id/FormUpdateFragment"
        tools:layout="@layout/form_update_fragment"
        android:name="com.example.musicupload.fragment.FormUpdateFragment"
        android:label="@string/updateInfo">

        <action
            android:id="@+id/FormUpdateFragment_to_nav_cloud"
            app:destination="@id/nav_cloud"/>
    </fragment>

    <fragment
        android:id="@+id/nav_user"
        android:name="com.example.musicupload.fragment.UserFragment"
        android:label="@string/form_user_fragment"
        tools:layout="@layout/user_fragment">

    </fragment>

</navigation>